style.css
body {
    background-color: white;
    margin-left: 300px;
    margin-right: 300px;
  }
  
/* css for header begins */

  .header {
    display: flex;
    justify-content: space-between;
    background-color: rgb(200, 209, 250);
    padding: 10px;
    padding-bottom: 50px;
  }
  
  .left, .right {
    display: flex;
    flex-flow: column;
    justify-content: space-between;
  }

  .left {
    margin-left: 10%;
  }

  .links {
    display: flex;
    justify-content: space-evenly;
    margin-top: 15px;
    font-size: 20px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }

  .right {
    margin-right: 10%;
  }

  .sop {
    font-size: 48px;
    font-weight: bold;
    margin-bottom: 1px;
    margin-top: 0px;
  }
  
  .sea {
    width: 70px;
    border-radius: 25px;
    margin-bottom: 40px;
}

  .bt {
    width: 450px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  #b1 {
    max-width: 30%;
    font-size: 20px;
    border-radius: 30px;
    padding: 5px;
  }
  
  .ep {
    font-size: 20px;
    margin-top: 1px;
  }

  .cars {
    max-height: 250px;
    border-radius: 15px;
  }

  /* CSS FOR GALLERY BEGINS */

  .container2 {
    display: flex;
    flex-direction: column;
    padding: 20px;
  }

  .title {
    margin-bottom: 20px;
    font-size: 40px;
    text-align: center;
    font-weight: bold;
  }
  
  .gi {
    max-width: 150px;
    border-radius: 20px;
  }

  .gallery {
    border: 2px solid black;
    display: flex;
    justify-content: space-around;
    text-align: center;
    font-style: italic;
    font-weight: 300;
  }

/* QUOTE CSS STARTS HERE */

.container3 {
    display: flex;
    flex-direction: column;
    background-color: bisque;
}

.quotebloc {
    padding: 100px;
    background-color: rgb(200, 209, 250);
}

.quote, .signee {
    font-style: italic;
    font-size: 36px;
}

.quote {
    padding: 25px 115px 0 115px;
}

.signee {
    align-self: flex-end;
    padding-bottom: 20px;
    padding-right: 125px;
}

/* signup CSS STARTS HERE */

.signup {
    padding: 20px;
}

.container4 {
    border: 2px solid black;
    background-color: bisque;
    display: flex;
    justify-content: space-around;
}

.l1 {
    font-weight: 600;
    font-size: 30px;
    margin-bottom: 1px;
}

.l2 {
    font-size: 20px;
    font-style: italic;
    margin-top: 1px;
}

.rs {
    display: flex;
    align-items: center;
}

#b2 {
    background-color: blue
    border: none;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    font-size: 26px;
}

.footer {
    background-color: black;
    color: white;
    font-size: 18px;
    padding: 20px;
    text-align: center;
    margin-bottom: 5px;
}

